--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
         completions."
     </string>
     <string name="title_activity_events">Events</string>
+    <string name="title_neweventActivity">Post New Event</string>
+    <string name="title_accountActivity">Edit Account Details</string>
     <string name="navigation_drawer_open">Open Navigation</string>
     <string name="navigation_drawer_close">Close Navigation</string>
 </resources>
