--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <string name="title_activity_events">Events</string>
     <string name="title_neweventActivity">Post New Event</string>
     <string name="title_accountActivity">Edit Account Details</string>
+    <string name="title_socialActivity">Social Media</string>
+    <string name="title_Comments">Comments for Events</string>
+    <string name="title_postComments">Comments for Posts</string>
+    <string name="title_newPostActivity">Make a new Post</string>
     <string name="navigation_drawer_open">Open Navigation</string>
     <string name="navigation_drawer_close">Close Navigation</string>
 </resources>
